frigate/svc.yaml
# plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
  annotations:
    io.cilium/lb-ipam-ips: 192.168.50.43
spec:
  selector:
    app: frigate
  type: LoadBalancer
  ports:
    - port: 5000               # < port to open on the outside on the server
      targetPort: 5000         # < targetport. port on the pod to passthrough
      name: frigate             # < reference name for the port in the deployment yaml
      protocol: TCP
